ldebug.h

LUAI_FUNC const char *luaG_addinfo (lua_State *L, const char *msg,
                                                  TString *src, int line);
LUAI_FUNC l_noret luaG_errormsg (lua_State *L);
LUAI_FUNC int currentline (CallInfo *ci);
LUAI_FUNC const char *svalue_wrapper(StkId top);